@@ -99,9 +99,9 @@ public class InitialPositionTable extends PositionTable{
 	p = prependPathBelowMV(p,pio, entryForCfma(pio.constrainedFormula(),
 	                                           filter));
 	p = prependPathInFormula(p,pio);
-	p = p.prepend(new Integer(indexOfCfma(pio.constrainedFormula(),
+	p = p.prepend(Integer.valueOf(indexOfCfma(pio.constrainedFormula(),
 					      filter)));
-	p = p.prepend(new Integer(0));
+	p = p.prepend(Integer.valueOf(0));
 	return p;
     }
 
@@ -113,7 +113,7 @@ public class InitialPositionTable extends PositionTable{
 
         IntIterator pit = pio.posInTermBelowMetavariable ().reverseIterator ();
         while ( pit.hasNext () ) {
-            p = p.prepend ( new Integer ( pit.next () ) );
+            p = p.prepend ( Integer.valueOf ( pit.next () ) );
         }
 
         return p;
@@ -154,7 +154,7 @@ public class InitialPositionTable extends PositionTable{
 					       PosInOccurrence pio) {
 	IntIterator pit = pio.posInTerm().reverseIterator();
 	while (pit.hasNext()) {
-	    p = p.prepend(new Integer(pit.next()));
+	    p = p.prepend(Integer.valueOf(pit.next()));
 	}
 	return p;
     }
@@ -215,7 +215,4 @@ public class InitialPositionTable extends PositionTable{
     public Range[] getUpdateRanges() {
         return updateRanges.toArray(new Range[updateRanges.size()]);
     }
-
 }
-
-
