@@ -1,5 +1,5 @@
 // This file is part of KeY - Integrated Deductive Software Design
-// Copyright (C) 2001-2010 Universitaet Karlsruhe, Germany
+// Copyright (C) 2001-2009 Universitaet Karlsruhe, Germany
 //                         Universitaet Koblenz-Landau, Germany
 //                         Chalmers University of Technology, Sweden
 //
@@ -20,12 +20,10 @@ import de.uka.ilkd.key.collection.ImmutableSet;
 import de.uka.ilkd.key.java.PrettyPrinter;
 import de.uka.ilkd.key.java.ProgramElement;
 import de.uka.ilkd.key.java.Services;
-import de.uka.ilkd.key.java.StatementBlock;
 import de.uka.ilkd.key.java.abstraction.KeYJavaType;
+import de.uka.ilkd.key.ldt.HeapLDT;
 import de.uka.ilkd.key.logic.*;
 import de.uka.ilkd.key.logic.op.*;
-import de.uka.ilkd.key.logic.op.oclop.OclOp;
-import de.uka.ilkd.key.logic.sort.ObjectSort;
 import de.uka.ilkd.key.logic.sort.Sort;
 import de.uka.ilkd.key.rule.*;
 import de.uka.ilkd.key.rule.inst.SVInstantiations;
@@ -54,7 +52,7 @@ import de.uka.ilkd.key.util.pp.UnbalancedBlocksException;
  *
  *
  */
-public class LogicPrinter {
+public final class LogicPrinter {
 
     /**
      * The default and minimal value o fthe
@@ -63,71 +61,37 @@ public class LogicPrinter {
     public static final int DEFAULT_LINE_WIDTH = 55;
 
     /** The max. number of characters to put in one line */
-    protected int lineWidth = DEFAULT_LINE_WIDTH;
+    private int lineWidth = DEFAULT_LINE_WIDTH;
 
     /**
      * The ProgramPrinter used to pretty-print Java blocks in
      * formulae.
      */
-    protected ProgramPrinter prgPrinter;
+    private ProgramPrinter prgPrinter;
 
     /** Contains information on the concrete syntax of operators. */
     private final NotationInfo notationInfo;
 
     /** the services object */
-    protected final Services services;
-
-    /** The sequent we are pretty-printing */
-    //private Sequent            seq;
-    //private SequentPrintFilter filter;
+    private final Services services;
 
     /** This chooses the layout. */
-    protected Layouter layouter;
+    private Layouter layouter;
 
     /** The backend <code>layouter</code> will write to. */
-    protected Backend backend;
-
-    /** The constraint used for metavariable instantiations of the
-     * current formula */
-    Constraint formulaConstraint = null;
+    private Backend backend;
 
     /**If pure is true the PositionTable will not be calculated */
     private boolean pure = false;
 
-    protected SVInstantiations instantiations = 
-        SVInstantiations.EMPTY_SVINSTANTIATIONS;
-
-    /** For OCL Simplification. So that OCL/UML properties
-        are pretty-printed the right way. */
-    private boolean oclPrettyPrinting = false;
-
-
-    public static String quickPrintLocationDescriptors(
-                                        ImmutableSet<LocationDescriptor> locations,
-                                        Services services) {
-        
-        final NotationInfo ni = NotationInfo.createInstance();
-        if (services != null) {
-            PresentationFeatures.modifyNotationInfo(ni,
-                    services.getNamespaces().functions());
-        }
-        LogicPrinter p = new LogicPrinter(null, 
-        				  ni, 
-        				  services);
-        try {
-            p.printLocationDescriptors(locations);
-        } catch (IOException ioe) {
-            return locations.toString();
-        }
-        return p.result().toString();
-    }
+    private SVInstantiations instantiations
+    	= SVInstantiations.EMPTY_SVINSTANTIATIONS;
     
     
     public static String quickPrintTerm(Term t, Services services) {
-        final NotationInfo ni = NotationInfo.createInstance();
+        final NotationInfo ni = new NotationInfo();
         if (services != null) {
-            PresentationFeatures.modifyNotationInfo(ni,
-                    services.getNamespaces().functions());
+            ni.refresh(services);
         }
         LogicPrinter p = new LogicPrinter(null, 
                                           ni, 
@@ -139,6 +103,34 @@ public class LogicPrinter {
         }
         return p.result().toString();
     }
+    
+    
+    /**
+     * Creates a LogicPrinter.  Sets the sequent to be printed, as
+     * well as a ProgramPrinter to print Java programs and a
+     * NotationInfo which determines the concrete syntax.
+     *
+     * @param prgPrinter   the ProgramPrinter that pretty-prints Java programs
+     * @param notationInfo the NotationInfo for the concrete syntax
+     * @param backend      the Backend for the output
+     * @param purePrint    if true the PositionTable will not be calculated
+                    (simulates the behaviour of the former PureSequentPrinter)
+     */
+    public LogicPrinter(ProgramPrinter prgPrinter,
+                        NotationInfo notationInfo,
+                        Backend backend, 
+                        Services services,
+                        boolean purePrint) {
+	this.backend      = backend;
+	this.layouter     = new Layouter(backend,2);
+	this.prgPrinter   = prgPrinter;
+	this.notationInfo = notationInfo;
+	this.services     = services;
+	this.pure         = purePrint;
+	if(services != null) {
+	    notationInfo.refresh(services);
+	}
+    }    
     
 
     /**
@@ -153,33 +145,11 @@ public class LogicPrinter {
     public LogicPrinter(ProgramPrinter prgPrinter,
                         NotationInfo notationInfo,
                         Services services) {
-	backend           = new PosTableStringBackend(lineWidth);
-	layouter          = new Layouter(backend,2);
-	this.prgPrinter   = prgPrinter;
-	this.notationInfo = notationInfo;
-	this.services     = services;
-    }
-
-    /**
-     * Creates a LogicPrinter.  Sets the sequent to be printed, as
-     * well as a ProgramPrinter to print Java programs and a
-     * NotationInfo which determines the concrete syntax.
-     *
-     * @param prgPrinter   the ProgramPrinter that pretty-prints Java programs
-     * @param notationInfo the NotationInfo for the concrete syntax
-     * @param backend      the Backend for the output
-     * @param services     the Services object
-     */
-
-    public LogicPrinter(ProgramPrinter prgPrinter,
-                        NotationInfo notationInfo,
-                        Backend backend,
-                        Services services) {
-	this.backend      = backend;
-	layouter          = new Layouter(backend,2);
-	this.prgPrinter   = prgPrinter;
-	this.notationInfo = notationInfo;
-	this.services     = services;
+	this(prgPrinter, 
+             notationInfo, 
+             new PosTableStringBackend(DEFAULT_LINE_WIDTH), 
+             services, 
+             false);
     }
 
     /**
@@ -197,37 +167,14 @@ public class LogicPrinter {
                         NotationInfo notationInfo, 
                         Services services,
                         boolean purePrint) {
-        backend           = new PosTableStringBackend(lineWidth);
-        layouter          = new Layouter(backend,2);
-        this.prgPrinter   = prgPrinter;
-        this.notationInfo = notationInfo;
-        this.services     = services;
-        pure = purePrint;
+	this(prgPrinter, 
+	     notationInfo,
+	     new PosTableStringBackend(DEFAULT_LINE_WIDTH), 
+	     services,
+	     purePrint);
     }
 
-    /**
-     * Creates a LogicPrinter.  Sets the sequent to be printed, as
-     * well as a ProgramPrinter to print Java programs and a
-     * NotationInfo which determines the concrete syntax.
-     *
-     * @param prgPrinter   the ProgramPrinter that pretty-prints Java programs
-     * @param notationInfo the NotationInfo for the concrete syntax
-     * @param backend      the Backend for the output
-     * @param purePrint    if true the PositionTable will not be calculated
-                    (simulates the behaviour of the former PureSequentPrinter)
-     */
-    public LogicPrinter(ProgramPrinter prgPrinter,
-                        NotationInfo notationInfo,
-                        Backend backend, 
-                        Services services,
-                        boolean purePrint) {
-        this.backend      = backend;
-        layouter          = new Layouter(backend,2);
-        this.prgPrinter   = prgPrinter;
-        this.notationInfo = notationInfo;
-        this.services     = services;
-        pure = purePrint;
-    }
+
 
 
     /**
@@ -267,13 +214,14 @@ public class LogicPrinter {
      * PresentationFeatures or abbreviations have changed.
      * @param seq The Sequent to be reprinted
      * @param filter The SequentPrintFilter for seq
-     * @param newLineWidth the max. number of character to put on one line
+     * @param lineWidth the max. number of character to put on one line
      *   (the actual taken linewidth is the max of
      *   {@link LogicPrinter#DEFAULT_LINE_WIDTH} and the given value
      */
-    public void update(Sequent seq, SequentPrintFilter filter,
-            int newLineWidth) {
-        setLineWidth(newLineWidth);
+    public void update(Sequent seq, 
+	    	       SequentPrintFilter filter,
+	    	       int lineWidth) {
+        setLineWidth(lineWidth);
         reset();
         printSequent(seq, filter);
     }
@@ -549,9 +497,9 @@ public class LogicPrinter {
     protected void printRules (ImmutableList<Taclet> rules) throws IOException{
         layouter.brk().beginC(2).print("\\addrules (");
         SVInstantiations svi = instantiations;
-        for (Taclet rule : rules) {
+        for (Iterator<Taclet> it = rules.iterator(); it.hasNext();) {
             layouter.brk();
-            Taclet t = rule;
+            Taclet t = it.next();
             printTaclet(t, instantiations, true);
             instantiations = svi;
         }
@@ -574,8 +522,7 @@ public class LogicPrinter {
     protected void printSchemaVariable(SchemaVariable sv) throws IOException {
 	Object o = getInstantiations().getInstantiation(sv);
 	if (o == null) {
-	    if (sv.isProgramSV()) {
-		Debug.assertTrue(sv instanceof SortedSchemaVariable);
+	    if (sv instanceof ProgramSV) {
 		printProgramSV((ProgramSV)sv);
 	    } else {
 		printConstant(sv.name().toString());
@@ -587,8 +534,8 @@ public class LogicPrinter {
 		printProgramElement((ProgramElement)o);
 	    } else {		
 		Debug.log4jWarn("Unknown instantiation type of " + o + 
-			    	  "; class is " + o.getClass().getName(),
-			         LogicPrinter.class.getName());
+			        "; class is " + o.getClass().getName(),
+			        LogicPrinter.class.getName());
 		printConstant(sv.name().toString());
 	    }
 	}
@@ -772,14 +719,12 @@ public class LogicPrinter {
         while ( size-- != 0 ) {
             entry = it.next ();
             markStartSub();
-            formulaConstraint = entry.getDisplayConstraint ();
             printConstrainedFormula( entry.getFilteredFormula () );
             markEndSub();
             if ( size != 0 ) {
                 layouter.print(",").brk(1);
             }
         }
-        formulaConstraint = null;
     }
 
     /**
@@ -790,154 +735,10 @@ public class LogicPrinter {
      */
     public void printConstrainedFormula(ConstrainedFormula cfma)
         throws IOException {
-                if ( cfma.constraint().isBottom() ) {
-                    printTerm(cfma.formula());
-                } else {
-                    layouter.beginC(0);
-                    layouter.ind();
-                    printTerm(cfma.formula());
-                    layouter.brk(1,3).print("<<").ind(1,6);
-                    printConstraint(cfma.constraint());
-                    layouter.end();
-                }
+	assert cfma.constraint().isBottom() : "metavariables are disabled";
+	printTerm(cfma.formula());
     }
 
-    /**
-     * Pretty-prints a (shadowed) array expression
-     *
-     * @param arraySep usually a <code>[ </code> and a <code>] </code>
-     * @param t the array expression as a whole
-     * @param ass the associatives for the subterms
-     */
-    public void printArray(String[] arraySep, Term t, int[] ass)
-        throws java.io.IOException {
-        startTerm(t.arity());
-        for (int i = 0;  i<2; i++) {
-            maybeParens(t.sub(i), ass[i]);
-            layouter.print(arraySep[i]);
-            final Sort arraySortOfOperator = ((ArrayOp)t.op()).arraySort();
-            if (i==1 && t.sub(0).sort() != arraySortOfOperator) {
-                layouter.print("@(");
-                layouter.print(arraySortOfOperator.name().toString());
-                layouter.print(")");
-            }
-        }
-        if (t.op() instanceof ShadowedOperator) {
-            printTransactionNumber(t.sub(2));
-        }
-    }
-
-
-    /**
-     * Pretty-prints a location descriptor.
-     */
-    public void printLocationDescriptor(LocationDescriptor loc)
-        throws java.io.IOException {
-        
-        if(loc instanceof BasicLocationDescriptor) {
-            BasicLocationDescriptor bloc = (BasicLocationDescriptor) loc;
-            ImmutableSet<QuantifiableVariable> boundVars = bloc.getLocTerm().freeVars();
-
-            if(boundVars.size() > 0) {
-                layouter.print("\\for ").beginC();
-                printVariables(new ImmutableArray<QuantifiableVariable>
-                	(boundVars.toArray(new QuantifiableVariable[boundVars.size()])));
-                layouter.end();
-            }
-
-            if(bloc.getFormula().op() != Op.TRUE) {
-                layouter.print("\\if (").beginC();
-                printTerm(bloc.getFormula());
-                layouter.print(") ").end();
-            }
-            
-            printTerm(bloc.getLocTerm());
-
-        } else {
-            Debug.assertTrue(loc instanceof EverythingLocationDescriptor);
-            layouter.print("*");
-        }
-    }
-    
-    
-    /**
-     * Pretty-prints a set of location descriptors.
-     */
-    public void printLocationDescriptors(ImmutableSet<LocationDescriptor> locations)
-        throws java.io.IOException {
-        layouter.print("{").beginC();
-        Iterator<LocationDescriptor> it = locations.iterator();
-        while(it.hasNext()) {
-            printLocationDescriptor(it.next());
-            if(it.hasNext()) {
-                layouter.print(", ").brk();
-            }
-        }
-        layouter.print("}").end();
-    }
-
-
-    /**
-     * Pretty-print a constraint
-     *
-     * This does currently only work well for "EqualityConstraint"s,
-     * which are printed as a list of unifications. The bottom
-     * constraint doesn't get special handling in here, i.e. this
-     * method should not be called for p == Constraint.BOTTOM
-     */
-    public void printConstraint(Constraint p)
-        throws IOException
-    {
-        createPositionTable = false;
-        if ( p instanceof EqualityConstraint ) {
-
-            // Within the constraint metavariables should not be
-            // instantiated
-            Constraint frmC   = formulaConstraint;
-            formulaConstraint = null;
-
-            EqualityConstraint eqc = (EqualityConstraint)p;
-            List<Metavariable> vars = new ArrayList<Metavariable> ();
-            {
-                Iterator<Metavariable>it =
-                    eqc.restrictedMetavariables ();
-
-                while ( it.hasNext () )
-                    vars.add ( it.next () );
-            }
-
-            startTerm ( vars.size () );
-            layouter.print("[ ").beginI(0);
-
-            ListIterator<Metavariable> it = vars.listIterator ();
-            Metavariable mv;
-            Term         inst;
-            while ( it.hasNext () ) {
-                mv   = it.next ();
-                inst = eqc.getDirectInstantiation ( mv );
-                if ( inst == null )
-                    inst = TermFactory.DEFAULT.createFunctionTerm ( mv );
-
-                markStartSub();
-                printInfixTerm ( TermFactory.DEFAULT.createFunctionTerm ( mv ), 15,
-                                 "=",
-                                 inst, 10);
-                markEndSub();
-
-                if ( it.hasNext () ) {
-                    layouter.print(",").brk(1,0);
-                }
-            }
-            layouter.print(" ]").end();
-
-            formulaConstraint = frmC;
-
-        } else {
-            // Don't know how to pretty-print this constraint class
-            layouter.print ( p.toString () );
-        }
-        createPositionTable = true;
-    }
 
 
     /**
@@ -946,8 +747,7 @@ public class LogicPrinter {
      *
      * @param t the Term to be printed
      */
-    public void printTerm(Term t)
-        throws IOException {
+    public void printTerm(Term t) throws IOException {
         if(notationInfo.getAbbrevMap().isEnabled(t)){
             startTerm(0);
             layouter.print(notationInfo.getAbbrevMap().getAbbrev(t));
@@ -996,9 +796,7 @@ public class LogicPrinter {
      *
      *
      * @param t the Term to be printed */
-    public void printTermContinuingBlock(Term t)
-        throws IOException
-    {
+    public void printTermContinuingBlock(Term t) throws IOException {
         notationInfo.getNotation(t.op(), services).printContinuingBlock(t,this);
     }
 
@@ -1011,26 +809,38 @@ public class LogicPrinter {
      *
      * @param name the name to be printed before the parentheses.
      * @param t the term to be printed.  */
-    public void printFunctionTerm(String name,
-                                  Term t)
-        throws IOException
-    {
-        //For OCL simplification
-        if (oclPrettyPrinting && PresentationFeatures.ENABLED && t.arity()>0) {
-            printOCLUMLPropertyTerm(name, t);
-        }
-        //
+    public void printFunctionTerm(String name, Term t) throws IOException {	
+	//XXX
+	if(NotationInfo.PRETTY_SYNTAX
+           && services != null
+           && t.op() instanceof Function
+           && t.sort() == services.getTypeConverter().getHeapLDT().getFieldSort() 
+           && t.arity() == 0
+           && t.boundVars().isEmpty()) {
+            startTerm(0);            
+            final String prettyFieldName 
+            	= services.getTypeConverter()
+                          .getHeapLDT()
+                          .getPrettyFieldName((Function)t.op());            
+            layouter.print(prettyFieldName);
+        } 
+        
         else {
             startTerm(t.arity());
             layouter.print(name);
-            if(t.arity()>0 || t.op() instanceof ProgramMethod) {
+            if(!t.boundVars().isEmpty()) {
+        	layouter.print("{").beginC(0);
+        	printVariables(t.boundVars());
+        	layouter.print("}").end();
+            }
+            if(t.arity() > 0) {
                 layouter.print("(").beginC(0);
-                for (int i=0;i<t.arity();i++) {
+                for(int i = 0, n = t.arity(); i < n; i++) {
                     markStartSub();
                     printTerm(t.sub(i));
                     markEndSub();
 
-                    if (i<t.arity()-1) {
+                    if(i < n - 1) {
                         layouter.print(",").brk(1,0);
                     }
                 }
@@ -1039,56 +849,203 @@ public class LogicPrinter {
         }
     }
 
-    public void printCast(String pre, String post,
-            Term t, int ass) throws IOException {
-        final CastFunctionSymbol cast = (CastFunctionSymbol)t.op();
+    public void printCast(String pre, 
+	    		  String post,
+	    		  Term t, 
+	    		  int ass) throws IOException {
+        final SortDependingFunction cast = (SortDependingFunction)t.op();
+        
         startTerm(t.arity());
         layouter.print(pre);
         layouter.print(cast.getSortDependingOn().toString());
         layouter.print(post);
         maybeParens(t.sub(0), ass);
     }
+    
+    
+    public void printSelect(Term t) throws IOException {
+        assert t.boundVars().isEmpty();            
+        assert t.arity() == 3;	
+	final HeapLDT heapLDT = services == null 
+			        ? null 
+			        : services.getTypeConverter().getHeapLDT();
+        if(NotationInfo.PRETTY_SYNTAX
+            && heapLDT != null
+            && t.sub(0).op() == heapLDT.getHeap()) {
+            startTerm(3);
+            
+            final Term objectTerm = t.sub(1);
+            final Term fieldTerm  = t.sub(2);
+                
+            markStartSub();
+            //heap not printed
+            markEndSub();
 
-
-    /** Print a term in <code>f(t1,...tn)</code> style.  If it doesn't
-     * fit on one line, <code>t2...tn</code> are aligned below t1.
-     * Print a term in <code>o.q(t1,...tn)</code> style.
-     *
-     * @param name the name of the query
-     * @param t the Term to be printed
-     * @param ass the int defining the associativity of 
-     * the term
-     */
-    public void printQueryTerm(String name,
-			       Term t, 
-			       int ass) 
-	throws IOException
-    {
-	int start = 0;
-	if((t.op() instanceof ProgramMethod) && (
-	       ((ProgramMethod) t.op()).isStatic() || 
-	       ((ProgramMethod) t.op()).isConstructor())){
-	    startTerm(t.arity());
-	    layouter.print(((ProgramMethod) t.op()).
-			   getContainerType().getName());
-	}else{
-	    start = 1;
-	    startTerm(t.arity());
-	    maybeParens(t.sub(0), ass);
-	}
-	layouter.print(".").print(name).print("(").beginC(0);
-	for (int i=start;i<t.arity();i++) {
-	    markStartSub();
-	    printTerm(t.sub(i));
-	    markEndSub();
-	    if (i<t.arity()-1) {
-		layouter.print(",").brk(1,0);
-	    }
-	}
-	layouter.print(")").end();
+            if(objectTerm.equals(TermBuilder.DF.NULL(services))
+                && fieldTerm.op() instanceof Function
+                && ((Function)fieldTerm.op()).isUnique()) {
+        	String className 
+        		= heapLDT.getClassName((Function)fieldTerm.op());
+        	
+        	if(className == null) {
+        	    markStartSub();
+        	    printTerm(objectTerm);
+        	    markEndSub();
+        	} else {
+        	    markStartSub();
+        	    //"null" not printed
+        	    markEndSub();
+        	    layouter.print(className);
+        	}
+        	
+        	layouter.print(".");
+        	
+                markStartSub();
+                startTerm(0);                    
+                printTerm(fieldTerm);
+                markEndSub();                    
+            } else if(fieldTerm.arity() == 0) {
+        	markStartSub();
+                printTerm(objectTerm);
+                markEndSub();
+        	
+                layouter.print(".");
+                
+                markStartSub();
+                startTerm(0);                    
+                printTerm(fieldTerm);
+                markEndSub();                    
+            } else if(fieldTerm.op() == heapLDT.getArr()) {
+        	markStartSub();
+                printTerm(objectTerm);
+                markEndSub();
+        	
+                layouter.print("[");
+                
+                markStartSub();
+                startTerm(1);
+                markStartSub();
+                printTerm(fieldTerm.sub(0));
+                markEndSub();
+                markEndSub();
+                
+                layouter.print("]");
+            } else {
+        	printFunctionTerm(t.op().name().toString(), t);
+            }	
+        } else {
+            printFunctionTerm(t.op().name().toString(), t);
+        }
     }
+    
+    
+    public void printLength(Term t) throws IOException {
+	final HeapLDT heapLDT = services == null 
+        			? null 
+        			: services.getTypeConverter().getHeapLDT();
+	if(NotationInfo.PRETTY_SYNTAX && heapLDT != null) {
+	    assert t.op() == heapLDT.getLength();
+	    startTerm(t.arity());
+	    
+	    markStartSub();
+	    printTerm(t.sub(0));
+	    markEndSub();
+	    layouter.print(".length");
+	} else {
+	    printFunctionTerm(t.op().name().toString(), t);            
+	}	
+    }
+    
+    
+    public void printObserver(Term t) throws IOException {
+	assert t.op() instanceof ObserverFunction;
+	assert t.boundVars().isEmpty();
+	final HeapLDT heapLDT = services == null 
+			        ? null 
+			        : services.getTypeConverter().getHeapLDT();	
+	if(NotationInfo.PRETTY_SYNTAX
+           && heapLDT != null 
+           && t.sub(0).op() == heapLDT.getHeap()) {
+	    final ObserverFunction obs = (ObserverFunction) t.op();
+            startTerm(t.arity());
+            markStartSub();
+            //heap not printed
+            markEndSub();
+            
+            if(!obs.isStatic()) {
+        	markStartSub();
+        	printTerm(t.sub(1));
+        	markEndSub();
+        	layouter.print(".");
+            }
+            
+            final String prettyFieldName 
+            	= services.getTypeConverter()
+                          .getHeapLDT()
+                          .getPrettyFieldName((Function)t.op());
+            layouter.print(prettyFieldName);
+            
+            if(obs.getNumParams() > 0 || obs instanceof ProgramMethod) {
+        	layouter.print("(").beginC(0);
+        	for(int i = 0, n = obs.getNumParams(); i < n; i++) {
+        	    markStartSub();
+        	    printTerm(t.sub(i + (obs.isStatic() ? 1 : 2)));
+        	    markEndSub();
+                    if(i < n - 1) {
+                        layouter.print(",").brk(1,0);
+                    }
+        	}
+        	layouter.print(")").end();
+            }
+        } else {
+            printFunctionTerm(t.op().name().toString(), t);            
+        }
+    }
+    
+    
+    public void printSingleton(Term t) throws IOException {
+	assert t.arity() == 2;
+	startTerm(2);	 
+	layouter.print("{(").beginC(0);;
 
+	markStartSub();	 
+	printTerm(t.sub(0));
+	markEndSub();
+	
+	layouter.print(",").brk(1,0);
+	
+	markStartSub();	 
+	printTerm(t.sub(1));
+	markEndSub();	
 
+	layouter.print(")}").end();
+    }  
+    
+    
+    public void printElementOf(Term t) throws IOException {
+	assert t.arity() == 3;
+	startTerm(3);
+	
+	layouter.print("(").beginC(0);
+	
+	markStartSub();	 
+	printTerm(t.sub(0));
+	markEndSub();
+	
+	layouter.print(",").brk(1,0);
+	
+	markStartSub();	 
+	printTerm(t.sub(1));
+	markEndSub();
+
+	layouter.print(")").end();
+	layouter.print(" \\in ");
+	
+	markStartSub();	 
+	printTerm(t.sub(2));
+	markEndSub();	
+    }      
+    
 
     /** Print a unary term in prefix style.  For instance
      * <code>!a</code>.  No line breaks are possible.
@@ -1122,23 +1079,6 @@ public class LogicPrinter {
         maybeParens(t, ass);
         layouter.print(name);
     }
-
-    /**
-     * Pretty-prints a shadowed attribute
-     * @param t1 the attribute prefix
-     * @param ass1  the associativity for the reference prefix
-     * @param name the attribute name
-     * @param t2 the shadow number term
-     */
-    public void printShadowedAttribute(Term t1, int ass1, String name,
-                                       Term t2)
-        throws java.io.IOException {
-        startTerm(2);
-        maybeParens(t1, ass1);
-        layouter.print(name);
-        printTransactionNumber(t2);
-    }
-
 
 
     /** Print a binary term in infix style.  For instance <code>p
@@ -1196,223 +1136,127 @@ public class LogicPrinter {
         maybeParens(r, assRight);
     }
 
-    /**
-     * prints an anonymous update
-     */
-    public void printAnonymousUpdate(Term t, int ass)
-    throws IOException {
-        mark(MARK_START_UPDATE);
-        layouter.beginC(2).print("{");
-        startTerm(1);
-        layouter.print(t.op().name().toString());
-        layouter.print("}");
-        mark(MARK_END_UPDATE);
-        layouter.brk(1);
-        maybeParens(t.sub(t.arity()-1), ass);
-        layouter.end();
-    }
-
 
     /**
-     * Print a term with an (quantified) update.  This looks like
-     * <code>{loc1 := val1 || ... || locn := valn} t</code>.  If line breaks are necessary, the
+     * Print a term with an update. This looks like
+     * <code>{u} t</code>.  If line breaks are necessary, the
      * format is
      *
      * <pre>
-     * {loc1:=val1 || ... || locn:=valn}
+     * {u}
      *   t
      * </pre>
      *
      * @param l       the left brace
-     * @param asgn    the assignment operator (including spaces)
      * @param r       the right brace
      * @param t       the update term
-     * @param ass1    associativity for the locations
-     * @param ass2    associativity for the new values
      * @param ass3    associativity for phi
      */
-
-    public void printQuanUpdateTerm (String l,
-                                     String asgn,
-                                     String r,
-                                     Term t,
-                                     int ass1,
-                                     int ass2,
-                                     int ass3) throws IOException {
-        final QuanUpdateOperator op = (QuanUpdateOperator)t.op ();
-        mark(MARK_START_UPDATE);
-        layouter.beginC ( 2 ).print ( l );
-        startTerm ( t.arity () );
-        for ( int i = 0; i < op.locationCount (); i++ ) {
-            final Operator loc = op.location ( i );
-
-            layouter.beginC(0);
-            printUpdateQuantification ( t, op, i );
-
-            final String[] separator = setupUpdateSeparators ( loc,
-                                                               op.location(t, i));
-            for ( int j = loc.arity (); j >= 1; j-- ) {
-                final Term sub = t.sub ( op.valuePos ( i ) - j );
-
-                if (loc instanceof ShadowedOperator && j == 1) {
-                    printTransactionNumber(sub);
-                } else {
-                    markStartSub ();
-                    printTerm ( sub );
-                    markEndSub ();
-                    layouter.print ( separator[loc.arity () - j] );
-                }
-            }
-            layouter.print ( asgn ).brk(0,0);
-            layouter.end();
-            maybeParens ( op.value ( t, i ), ass2 );
-            if ( i < op.locationCount () - 1 ) {
-                layouter.print ( " ||" ).brk ( 1, 0 );
-            }
-        }
-
-        layouter.print ( r );
+    public void printUpdateApplicationTerm (String l,
+                                            String r,
+                                            Term t,
+                                            int ass3) throws IOException {
+	assert t.op() instanceof UpdateApplication && t.arity() == 2;
+		
+	mark(MARK_START_UPDATE);
+        layouter.beginC(2).print(l);
+        startTerm(t.arity());
+        
+        markStartSub();
+        printTerm(t.sub(0));
+        markEndSub();        
+        
+        layouter.print(r);
         mark(MARK_END_UPDATE);
-        layouter.brk ( 0 );
-        maybeParens ( t.sub ( t.arity () - 1 ), ass3 );
-        layouter.end ();
-    }
-
-    /**
-     * @param sub
-     * @throws IOException
+        layouter.brk(0);
+        
+        maybeParens(t.sub(1), ass3);
+        
+        layouter.end();
+    }    
+    
+    
+   /**
+     * Print an elementary update.  This looks like
+     * <code>loc := val</code>
+     *
+     * @param asgn    the assignment operator (including spaces)
+     * @param ass2    associativity for the new values
      */
-    private void printTransactionNumber(final Term sub) throws IOException {
-        final int primes =  asPrimes ( sub );
-        if ( primes == -1 ) {
-            layouter.print ( "^(" );
-            markStartSub ();
-            printTerm ( sub );
-            markEndSub ();
-            layouter.print ( ")" );
-        } else {
-            final StringBuffer s_primes = new StringBuffer();
-            for (int p = 0; p<primes; p++) {
-                s_primes.append("\'");
-            }
-            markStartSub ();
-            markEndSub ();
-            layouter.print(s_primes.toString());
-
-        }
+    public void printElementaryUpdate(String asgn,
+                                      Term t,
+                                      int ass2) throws IOException {
+	ElementaryUpdate op = (ElementaryUpdate)t.op();
+	
+	assert t.arity() == 1;
+	startTerm(1);
+	
+	layouter.print(op.lhs().name().toString());
+	
+	layouter.print(asgn);
+	
+	maybeParens(t.sub(0), ass2);
     }
-
-
-    private void printUpdateQuantification (Term t,
-                                            QuanUpdateOperator op,
-                                            int locationNum) throws IOException {
-        final ImmutableArray<QuantifiableVariable> boundVars =
-            t.varsBoundHere ( op.valuePos ( locationNum ) );
-        if ( boundVars.size () > 0 ) {
-            layouter.print ( "\\for " );
-            printVariables ( boundVars );
-        }
-
-        if ( op.guardExists ( locationNum ) ) {
-            layouter.print ( "\\if (" ).beginC ( 0 );
-            markStartSub ();
-            printTerm ( t.sub ( op.guardPos ( locationNum ) ) );
-            markEndSub ();
-            layouter.print ( ") " ).end ();
-        }
+    
+    
+    private void printParallelUpdateHelper(String separator, Term t, int ass)
+    					    throws IOException {
+	assert t.arity() == 2;
+	startTerm(2);
+	
+	if(t.sub(0).op() == UpdateJunctor.PARALLEL_UPDATE) {
+	    markStartSub();
+	    printParallelUpdateHelper(separator, t.sub(0), ass);
+	    markEndSub();
+	} else {
+	    maybeParens(t.sub(0), ass);
+	}
+	
+	layouter.brk(1).print(separator + " ");
+	
+	if(t.sub(1).op() == UpdateJunctor.PARALLEL_UPDATE) {
+	    markStartSub();
+	    printParallelUpdateHelper(separator, t.sub(1), ass);
+	    markEndSub();
+	} else {
+	    maybeParens(t.sub(1), ass);
+	}	
     }
+    
+    
+    public void printParallelUpdate(String separator, Term t, int ass) 
+    					    throws IOException {
+	layouter.beginC(0);
+	printParallelUpdateHelper(separator, t, ass);
+	layouter.end();
+    }
+    
 
     protected void printVariables (ImmutableArray<QuantifiableVariable> vars)
                                             throws IOException {
         int size = vars.size ();
-        if(size != 1)
-          layouter.print ( "(" );
-        for ( int j = 0; j != vars.size (); ) {
-            final QuantifiableVariable v = vars.get ( j );
+        for(int j = 0; j != size; j++) {
+            final QuantifiableVariable v = vars.get (j);
             if(v instanceof LogicVariable){
                 Term t =
-                    TermFactory.DEFAULT.createVariableTerm((LogicVariable) v);
-                if(notationInfo.getAbbrevMap().containsTerm(t)){
+                    TermFactory.DEFAULT.createTerm((LogicVariable) v);
+                if(notationInfo.getAbbrevMap().containsTerm(t)) {
                     layouter.print (v.sort().name().toString() + " " +
                                     notationInfo.getAbbrevMap().getAbbrev(t));
-                }else{
-                    layouter.print ( v.sort().name() + " " + v.name ());
+                } else {
+                    layouter.print (v.sort().name() + " " + v.name ());
                 }
-            }else{
-                layouter.print ( v.name ().toString());
+            } else {
+                layouter.print (v.name().toString());
             }
-            ++j;
-            if ( j != vars.size () ) layouter.print ( "; " );
-        }
-        if(size != 1)
-          layouter.print ( ") " );
-        else
-          layouter.print ( "; " );
-    }
-
-
-    private int asPrimes(Term shadowNum) {
-        int result = 0;
-        Term t = shadowNum;        
-        if (services == null || t.op() != services.getTypeConverter()
-        					  .getIntegerLDT()
-        					  .getNumberSymbol()) {
-            return -1;
-        }
-
-
-        final String numberString =
-            Notation.NumLiteral.printNumberTerm(t);
-        if (numberString == null) {
-            result = -1;
-        } else {
-            try {
-                result = Integer.parseInt(numberString);
-            } catch (NumberFormatException nfe) {
-                result = -1;
+            if(j < size - 1) {
+        	layouter.print(", ");
             }
         }
-        return result>0 ? result : -1;
-
-    }
-    
-    /**
-     * setup the separators to be printed between the sub-terms of an update
-     * location.
-     * 
-     * The top entity of the update loc is printed by this method.
-     * 
-     * @param loc
-     *            location to write to
-     * @param t
-     *            term to assign
-     * @return an array of separating strings (elements may be "[" "]" "," ")" )
-     * @throws IOException
-     *             if thrown by layouter
-     */
-    private String[] setupUpdateSeparators (final Operator loc, final Term t)
-                                                throws IOException {
-        String[] separator = new String [loc.arity ()];
-        if ( loc instanceof AttributeOp ) {
-            separator[0] = Notation.
-               Attribute.printName(((AttributeOp)loc), t.sub(0), this);
-        } else if ( loc instanceof ArrayOp ) {
-            separator[0] = "[";
-            separator[1] = "]";
-        } else if ( loc.arity () == 0 ) {
-            layouter.print( loc.name ().toString ().replaceAll ( "::", "." ) );
-        } else {
-            layouter.print ( loc.name().toString() + "(" );
-            // bugfix: was "m = 1;..." which made separator[0]==null
-            for ( int m = 0; m < loc.arity () - 1; m++ ) {
-                separator[m] = ",";
-            }
-            separator[loc.arity () - 1] = ")";
-        }
-        return separator;
+        layouter.print(";");        
     }
 
-  
+      
     public void printIfThenElseTerm(Term t, String keyword) throws IOException {
         startTerm(t.arity());
 
@@ -1420,10 +1264,8 @@ public class LogicPrinter {
 
         layouter.print ( keyword );
 
-        if ( t.varsBoundHere ( 0 ).size () > 0 ) {
-            layouter.print ( " " );
-            printVariables ( t.varsBoundHere ( 0 ) );
-        }
+        assert t.boundVars().isEmpty();
+
         layouter.print( " (" );
         markStartSub ();
         printTerm ( t.sub ( 0 ) );
@@ -1575,29 +1417,6 @@ public class LogicPrinter {
     }
 
 
-    /** 
-     * Prints a metavariable. If the  {@link #formulaConstraint} 
-     * contains an instantiation for the metavariable the instantiation
-     * is printed rather than the metavariable itself.
-     * 
-     * @param p_mv the Metavariable to be printed
-     *  
-     */
-    public void printMetavariable ( Metavariable p_mv )
-    throws IOException
-        {
-        if ( formulaConstraint != null ) {
-                Term t = formulaConstraint.getInstantiation ( p_mv );
-                if ( t.op () != p_mv ) {
-                        printTerm ( t );
-                        return;
-                }
-        }
-
-        printConstant ( p_mv.name().toString() );
-    }
-
-
     /**
      * Print a Java block.  This is formatted using the ProgramPrinter
      * given to the constructor.  The result is indented according to
@@ -1690,6 +1509,8 @@ public class LogicPrinter {
                                   Term phi,
                                   int ass)
         throws IOException {
+	assert jb != null;
+	assert jb.program() != null;
         if (phi.op() instanceof ModalOperatorSV) {
             Object o = getInstantiations().getInstantiation((ModalOperatorSV) phi.op());
             if (o == null) {
@@ -1711,13 +1532,8 @@ public class LogicPrinter {
                     for (int i = 0; i < phi.arity(); i++) {
                         ta[i] = phi.sub(i);
                     }
-                    @SuppressWarnings("unchecked")
-                    ImmutableArray<QuantifiableVariable>[] aa = new ImmutableArray[phi.arity()];
-                    for (int i = 0; i < phi.arity(); i++) {
-                        aa[i] = phi.varsBoundHere(i);
-                    }
                     Term term = TermFactory.DEFAULT.
-			createTerm((Modality)o, ta, aa, phi.javaBlock());
+			createTerm((Modality)o, ta, phi.boundVars(), phi.javaBlock());
                     notationInfo.getNotation((Modality)o, services).print(term, this);
                     return;
                 }
@@ -1744,233 +1560,6 @@ public class LogicPrinter {
                 }
             }
             layouter.print(")");
-        }
-    }
-
-    /**
-     * Used for OCL Simplification.
-     */
-    public void printOCLWrapperTerm(Term t) throws IOException {
-        oclPrettyPrinting = true;
-        startTerm(1);
-        markStartSub();
-        printTerm(t.sub(0));
-        markEndSub();
-    }
-
-    /**
-     * Used for OCL Simplification.
-     * Pretty-prints iterate expressions.
-     * "collection->iterate(elem:T1 ; acc:T2=init | expr(elem, acc))"
-     */
-    public void printOCLIterateTerm(Term collection,
-                                    String arrow,
-                                    String name,
-                                    String leftParens,
-                                    String iterVarDecl,
-                                    String sep1,
-                                    String accVarDecl,
-                                    String equals,
-                                    Term accVarInit,
-                                    String sep2,
-                                    Term expr,
-                                    String rightParens) throws IOException {
-        startTerm(3);
-        layouter.beginC(0);
-        layouter.beginI(0);
-        markStartSub();
-        printTerm(collection);
-        markEndSub();
-        layouter.print(arrow).brk(0,2).print(name).end();
-        layouter.print(leftParens);
-        layouter.print(iterVarDecl).print(sep1);
-        layouter.brk(1,5);
-        layouter.print(accVarDecl).print(equals);
-        markStartSub();
-        printTerm(accVarInit);
-        markEndSub();
-        layouter.print(sep2);
-        layouter.brk(1,5);
-        markStartSub();
-        printTerm(expr);
-        markEndSub();
-        layouter.print(rightParens).end();
-    }
-
-    /**
-     * Used for OCL Simplification.
-     * Pretty-prints Collection operation expressions with one iteration variable.
-     * "collection->forAll(elem:T | expr(elem))"
-     */
-    public void printOCLCollOpBoundVarTerm(Term collection,
-                                           String arrow,
-                                           String name,
-                                           String leftParens,
-                                           String iterVarDecl,
-                                           String sep,
-                                           Term expr,
-                                           String rightParens) throws IOException {
-        startTerm(2);
-        layouter.beginC(0);
-        layouter.beginI(0);
-        markStartSub();
-        printTerm(collection);
-        markEndSub();
-        layouter.print(arrow).brk(0,2).print(name).end();
-        layouter.print(leftParens);
-        layouter.print(iterVarDecl).print(sep);
-        layouter.brk(1,5);
-        markStartSub();
-        printTerm(expr);
-        markEndSub();
-        layouter.print(rightParens).end();
-    }
-
-    /**
-     * Used for OCL Simplification.
-     * Pretty-prints Collection operation expressions without iteration variable.
-     * "collection->includes(object)"
-     */
-    public void printOCLCollOpTerm(String name, Term t) throws IOException {
-        startTerm(t.arity());
-        markStartSub();
-        printTerm(t.sub(0));
-        markEndSub();
-        layouter.print("->").print(name).print("(").beginC(0);
-        for (int i=1;i<t.arity();i++) {
-            markStartSub();
-            printTerm(t.sub(i));
-            markEndSub();
-            if (i<t.arity()-1) {
-                layouter.print(",").brk(1,0);
-            }
-        }
-        layouter.print(")").end();
-    }
-
-    /**
-     * Used for OCL Simplification.
-     * Pretty-prints if-then-else-endif expressions.
-     */
-    public void printOCLIfTerm(String ifS,
-                               Term ifT,
-                               String thenS,
-                               Term thenT,
-                               String elseS,
-                               Term elseT,
-                               String endif) throws IOException {
-        startTerm(3);
-        layouter.beginC(0);
-        layouter.print(ifS);
-        markStartSub();
-        printTerm(ifT);
-        markEndSub();
-        layouter.brk(1,1).print(thenS);
-        markStartSub();
-        printTerm(thenT);
-        markEndSub();
-        layouter.brk(1,1).print(elseS);
-        markStartSub();
-        printTerm(elseT);
-        markEndSub();
-        layouter.brk(1,0).print(endif).end();
-    }
-
-    /**
-     * Used for OCL Simplification.
-     * Pretty-prints Collection expressions.
-     * "Set{Alpha, Beta, Gamma}"
-     */
-    public void printOCLCollectionTerm(Term t) throws IOException {
-        startTerm(2);
-        markStartSub();
-        printTerm(t.sub(0));
-        markEndSub();
-        if (t.sub(1).op() == OclOp.EMPTY_SET
-            || t.sub(1).op() == OclOp.EMPTY_BAG
-            || t.sub(1).op() == OclOp.EMPTY_SEQUENCE) {
-            markStartSub();
-            layouter.print("");
-            markEndSub();
-        } else if (t.sub(1).op() == OclOp.INSERT_SET
-                 || t.sub(1).op() == OclOp.INSERT_BAG
-                 || t.sub(1).op() == OclOp.INSERT_SEQUENCE) {
-            layouter.print(",").brk(1,2);
-            markStartSub();
-            printOCLCollectionTerm(t.sub(1));
-            markEndSub();
-        } else {
-            layouter.print(",").brk(1,2);
-            markStartSub();
-            printTerm(t.sub(1));
-            markEndSub();
-        }
-    }
-
-    /**
-     * Used for OCL Simplification.
-     * Pretty-prints references to UML properties.
-     * "self.queryMethod()"
-     */
-    public void printOCLUMLPropertyTerm(String name, 
-                                        Term t) throws IOException {
-	int index = name.indexOf("+~");
-	if (index == -1) {
-	    String attribute = "." + name.substring(name.lastIndexOf("~")+1);
-	    printPostfixTerm(t.sub(0), 80, attribute);
-	} else {
-	    String temp = name.substring(0, index);
-	    String method = temp.substring(temp.lastIndexOf("~")+1);
-	    printQueryTerm(method, t, 121);
-	}
-    }
-
-    /**
-     * Used for OCL Simplification.
-     * Pretty-prints list of OCL constraints.
-     * "context <Context> inv:
-     *    <the invariant>"
-     */
-    public void printOCLInvariantTerm(Term context,
-                                      Term invariant) throws IOException {
-        startTerm(2);
-        layouter.beginC(0);
-        layouter.print("context ");
-        markStartSub();
-        printTerm(context);
-        markEndSub();
-        layouter.print(" inv:").brk(1,3);
-        markStartSub();
-        printTerm(invariant);
-        markEndSub();
-        layouter.end();
-    }
-
-    /**
-     * Used for OCL Simplification.
-     * Pretty-prints OCL constraints.
-     * "context <Context1> inv:
-     *    <invariant1>
-     *
-     *  context <Context2> inv:
-     *    <invariant2>"
-     */
-    public void printOCLListOfInvariantsTerm(Term t) throws IOException {
-        if (t.arity() > 0) {
-            startTerm(2);
-            markStartSub();
-            printTerm(t.sub(0));
-            markEndSub();
-            if (t.sub(1).op() == OclOp.NIL_INV) {
-                markStartSub();
-                layouter.print("");
-                markEndSub();
-            } else {
-                layouter.print("\n\n").brk(0,0);
-                markStartSub();
-                printOCLListOfInvariantsTerm(t.sub(1));
-                markEndSub();
-            }
         }
     }
 
@@ -2092,9 +1681,6 @@ public class LogicPrinter {
     private static final Object MARK_START_SUB = new Object();
     /** Mark the end of a subterm.  Needed for PositionTable construction.*/
     private static final Object MARK_END_SUB = new Object();
-    /** Mark the start of a term with a number of subterms.
-     * Needed for PositionTable construction.*/
-    private static final Object MARK_START_TERM = new Object();
     /** Mark the start of the first executable statement.
      * Needed for PositionTable construction.*/
     private static final Object MARK_START_FIRST_STMT = new Object();
@@ -2152,7 +1738,7 @@ public class LogicPrinter {
      */
     protected void startTerm(int size) {
         if (createPositionTable) {
-            mark(new Integer(size));
+            mark(Integer.valueOf(size));
         }
     }
 
@@ -2169,17 +1755,7 @@ public class LogicPrinter {
     public boolean printInShortForm(String attributeProgramName,
                                     Term t) {
         final Sort prefixSort;
-        if (t.op() instanceof Metavariable) {
-            Metavariable mv = (Metavariable)t.op();
-            if ( formulaConstraint != null ) {
-                    prefixSort =
-                        formulaConstraint.getInstantiation (mv).sort();
-            } else {
-                prefixSort = t.sort();
-            }
-        } else {
-            prefixSort = t.sort();
-        }
+        prefixSort = t.sort();
         return printInShortForm(attributeProgramName, prefixSort);
     }
 
@@ -2208,7 +1784,7 @@ public class LogicPrinter {
          for (int i = 0, sz = text.length(); i < sz; i++) {
              char c = text.charAt(i); 
              switch (c) {
-             case  '<':
+             case '<':
                  sb.append("&lt;");
                  break;
              case '>': 
@@ -2263,10 +1839,13 @@ public class LogicPrinter {
      * @param services the Services class used to access the type hierarchy
      * @return true if the attribute is uniquely determined
      */
-    public static boolean printInShortForm(String programName, Sort sort,
-                                   Services services) {
-        if ( ! ( services != null && sort != Sort.NULL && sort instanceof ObjectSort ) )
+    public static boolean printInShortForm(String programName, 
+	    				   Sort sort,
+	    				   Services services) {
+        if ( ! ( services != null  
+        	  && sort.extendsTrans(services.getJavaInfo().objectSort()))) {
             return false;
+        }
         final KeYJavaType kjt = services.getJavaInfo().getKeYJavaType(sort);
         assert kjt != null : "Did not find KeYJavaType for " + sort;
         return 
@@ -2275,7 +1854,7 @@ public class LogicPrinter {
 
     /** Utility class for stack entries containing the position table
      * and the position of the start of the subterm in the result.  */
-    private class StackEntry {
+    private static class StackEntry {
 
         PositionTable posTbl;
         int p;
@@ -2302,21 +1881,21 @@ public class LogicPrinter {
      * layouter with the various static <code>MARK_</code> objects
      * declared {@link LogicPrinter}.
      */
-    private class PosTableStringBackend extends StringBackend {
+    private static class PosTableStringBackend extends StringBackend {
 
         /** The top PositionTable */
-        private InitialPositionTable initPosTbl =
-            new InitialPositionTable();
+        private final InitialPositionTable initPosTbl 
+        	= new InitialPositionTable();
 
         /** The resulting position table or an intermediate result */
-        private PositionTable posTbl= initPosTbl;
+        private  PositionTable posTbl = initPosTbl;
 
         /** The position in result where the current subterm starts */
         private int pos = 0;
 
         /** The stack of StackEntry representing the nodes above
          * the current subterm */
-        private Stack<StackEntry> stack = new Stack<StackEntry>();
+        private final Stack<StackEntry> stack = new Stack<StackEntry>();
 
         /** If this is set, a ModalityPositionTable will
          * be built next.
@@ -2329,7 +1908,8 @@ public class LogicPrinter {
         private Range firstStmtRange;
 
         /** Remembers the start of an update to create a range */
-        private int updateStart;
+        private final Stack<Integer> updateStarts = new Stack<Integer>();
+        
 
         PosTableStringBackend(int lineWidth) {
             super(lineWidth);
@@ -2340,18 +1920,6 @@ public class LogicPrinter {
          */
         public InitialPositionTable getPositionTable() {
             return initPosTbl;
-        }
-
-
-        private void setupModalityPositionTable(StatementBlock block) {
-            int count = block.getStatementCount();
-            int position=0;
-            for (int i=0; i<count; i++){
-                posTbl.setStart(position);
-                position += block.getStatementAt(i).
-                    toString().length();
-                posTbl.setEnd(position-1, null);
-            }
         }
 
         /** Receive a mark and act appropriately.
@@ -2400,8 +1968,9 @@ public class LogicPrinter {
                 ((ModalityPositionTable)posTbl)
                     .setFirstStatementRange(firstStmtRange);
             } else if ( o==MARK_START_UPDATE ) {
-                updateStart = count();
+        	updateStarts.push(count());
             } else if ( o==MARK_END_UPDATE ) {
+        	int updateStart = updateStarts.pop();
                 initPosTbl.addUpdateRange(new Range(updateStart, count()));
             }
         }
