@@ -1,5 +1,5 @@
 // This file is part of KeY - Integrated Deductive Software Design
-// Copyright (C) 2001-2010 Universitaet Karlsruhe, Germany
+// Copyright (C) 2001-2009 Universitaet Karlsruhe, Germany
 //                         Universitaet Koblenz-Landau, Germany
 //                         Chalmers University of Technology, Sweden
 //
@@ -15,10 +15,8 @@ import java.util.Iterator;
 
 import de.uka.ilkd.key.collection.ImmutableList;
 import de.uka.ilkd.key.java.ProgramElement;
-import de.uka.ilkd.key.logic.ProgramElementName;
+import de.uka.ilkd.key.ldt.IntegerLDT;
 import de.uka.ilkd.key.logic.Term;
-import de.uka.ilkd.key.logic.ldt.AbstractIntegerLDT;
-import de.uka.ilkd.key.logic.ldt.IntegerLDT;
 import de.uka.ilkd.key.logic.op.*;
 import de.uka.ilkd.key.logic.sort.Sort;
 import de.uka.ilkd.key.util.Debug;
@@ -33,10 +31,10 @@ import de.uka.ilkd.key.util.Debug;
 public abstract class Notation {
 
     /**
-         * The priority of this operator in the given concrete syntax. This is
-         * used to determine whether parentheses are required around a subterm.
-         */
-    protected int priority;
+     * The priority of this operator in the given concrete syntax. This is
+     * used to determine whether parentheses are required around a subterm.
+     */
+    private final int priority;
 
     /** Create a Notation with a given priority. */
     protected Notation(int priority) {
@@ -44,41 +42,35 @@ public abstract class Notation {
     }
 
     /** get the priority of the term */
-    public int getPriority() {
+    public final int getPriority() {
 	return priority;
     }
 
     /**
-         * Print a term to a {@link LogicPrinter}. Concrete subclasses override
-         * this to call one of the <code>printXYZTerm</code> of
-         * {@link LogicPrinter}, which do the layout.
-         */
-    public void print(Term t, LogicPrinter sp) throws IOException {
-	if (sp.getNotationInfo().getAbbrevMap().isEnabled(t)) {
-	    sp.printTerm(t);
-	} else {
-	    sp.printConstant(t.toString());
-	    System.err.println("There is no registered Notation "
-		    + "for the operator\n" + t.op());
-	}
-    }
+     * Print a term to a {@link LogicPrinter}. Concrete subclasses override
+     * this to call one of the <code>printXYZTerm</code> of
+     * {@link LogicPrinter}, which do the layout.
+     */
+    public abstract void print(Term t, LogicPrinter sp) throws IOException;
 
     /**
-         * Print a term without beginning a new block. See
-         * {@link LogicPrinter#printTermContinuingBlock(Term)}for the idea
-         * behind this. The standard implementation just delegates to
-         * {@link #print(Term,LogicPrinter)}
-         */
+     * Print a term without beginning a new block. See
+     * {@link LogicPrinter#printTermContinuingBlock(Term)}for the idea
+     * behind this. The standard implementation just delegates to
+     * {@link #print(Term,LogicPrinter)}
+     */
     public void printContinuingBlock(Term t, LogicPrinter sp)
 	    throws IOException {
 	print(t, sp);
     }
 
+    
+    
     /**
-         * The standard concrete syntax for constants like true and false.
-         */
-    public static class Constant extends Notation {
-	String name;
+     * The standard concrete syntax for constants like true and false.
+     */
+    public static final class Constant extends Notation {
+	private final String name;
 
 	public Constant(String name, int prio) {
 	    super(prio);
@@ -91,12 +83,11 @@ public abstract class Notation {
     }
 
     /**
-         * The standard concrete syntax for prefix operators.
-         */
-    public static class Prefix extends Notation {
-	String name;
-
-	int ass;
+     * The standard concrete syntax for prefix operators.
+     */
+    public static final class Prefix extends Notation {
+	private final String name;
+	private final int ass;
 
 	public Prefix(String name, int prio, int ass) {
 	    super(prio);
@@ -105,22 +96,17 @@ public abstract class Notation {
 	}
 
 	public void print(Term t, LogicPrinter sp) throws IOException {
-	    if (sp.getNotationInfo().getAbbrevMap().isEnabled(t)) {
-		sp.printTerm(t);
-	    } else {
-		sp.printPrefixTerm(name, t.sub(0), ass);
-	    }
+	    sp.printPrefixTerm(name, t.sub(0), ass);
 	}
 
     }
 
     /**
-         * The standard concrete syntax for infix operators.
-         */
-    public static class Infix extends Notation {
-	String name;
-
-	int assLeft, assRight;
+     * The standard concrete syntax for infix operators.
+     */
+    public static final class Infix extends Notation {
+	private final String name;
+	private final int assLeft, assRight;
 
 	public Infix(String name, int prio, int assLeft, int assRight) {
 	    super(prio);
@@ -130,11 +116,7 @@ public abstract class Notation {
 	}
 
 	public void print(Term t, LogicPrinter sp) throws IOException {
-	    if (sp.getNotationInfo().getAbbrevMap().isEnabled(t)) {
-		sp.printTerm(t);
-	    } else {
-		sp.printInfixTerm(t.sub(0), assLeft, name, t.sub(1), assRight);
-	    }
+	    sp.printInfixTerm(t.sub(0), assLeft, name, t.sub(1), assRight);
 	}
 
 	/**
@@ -143,47 +125,19 @@ public abstract class Notation {
          */
 	public void printContinuingBlock(Term t, LogicPrinter sp)
 		throws IOException {
-	    if (sp.getNotationInfo().getAbbrevMap().isEnabled(t)) {
-		sp.printTerm(t);
-	    } else {
-		sp.printInfixTermContinuingBlock(t.sub(0), assLeft, name, t
-			.sub(1), assRight);
-	    }
+	    sp.printInfixTermContinuingBlock(t.sub(0), assLeft, name, t.sub(1), assRight);
 	}
 
     }
+    
 
+    
     /**
-         * The standard concrete syntax for arrays.
-         */
-    public static class ArrayNot extends Notation {
-
-	final private String[] arraySeparators;
-
-	private final int[] ass;
-
-	public ArrayNot(String[] arraySeparators, int prio, int[] ass) {
-	    super(prio);
-	    this.arraySeparators = arraySeparators;
-	    this.ass = ass;
-	}
-
-	public void print(Term t, LogicPrinter sp) throws IOException {
-	    if (sp.getNotationInfo().getAbbrevMap().isEnabled(t)) {
-		sp.printTerm(t);
-	    } else {
-		sp.printArray(arraySeparators, t, ass);
-	    }
-	}
-    }
-
-    /**
-         * The standard concrete syntax for quantifiers.
-         */
-    public static class Quantifier extends Notation {
-	String name;
-
-	int ass;
+     * The standard concrete syntax for quantifiers.
+     */
+    public static final class Quantifier extends Notation {
+	private final String name;
+	private final int ass;
 
 	public Quantifier(String name, int prio, int ass) {
 	    super(prio);
@@ -192,76 +146,21 @@ public abstract class Notation {
 	}
 
 	public void print(Term t, LogicPrinter sp) throws IOException {
-	    if (sp.getNotationInfo().getAbbrevMap().isEnabled(t)) {
-		sp.printTerm(t);
-	    } else {
-		sp.printQuantifierTerm(name, t.varsBoundHere(0), t.sub(0), ass);
-	    }
+	    sp.printQuantifierTerm(name, t.varsBoundHere(0), t.sub(0), ass);
 	}
 
     }
+    
 
     /**
-     * The standard concrete syntax for numerical quantifiers.
+     * The standard concrete syntax for DL modalities box and diamond.
      */
-    public static class NumericalQuantifier extends Notation {
-        String name;
+    public static final class ModalityNotation extends Notation {
+	private final String left, right;
 
-        int ass1, ass2;
+	private final int ass;
 
-        public NumericalQuantifier(String name, int prio, int ass1, int ass2) {
-            super(prio);
-            this.name = name;
-            this.ass1 = ass1;
-            this.ass2 = ass2;
-        }
-
-        public void print(Term t, LogicPrinter sp) throws IOException {
-            if (sp.getNotationInfo().getAbbrevMap().isEnabled(t)) {
-                sp.printTerm(t);
-            } else {
-                sp.printNumericalQuantifierTerm(name, t.varsBoundHere(0), t.sub(0), 
-                        t.sub(1), ass1, ass2);
-            }
-        }
-
-    }       
-
-    /**
-     * The standard concrete syntax for bounded numerical quantifiers.
-     */
-    public static class BoundedNumericalQuantifier extends Notation {
-        String name;
-
-        int ass1, ass2;
-
-        public BoundedNumericalQuantifier(String name, int prio, int ass1, int ass2) {
-            super(prio);
-            this.name = name;
-            this.ass1 = ass1;
-            this.ass2 = ass2;
-        }
-
-        public void print(Term t, LogicPrinter sp) throws IOException {
-            if (sp.getNotationInfo().getAbbrevMap().isEnabled(t)) {
-                sp.printTerm(t);
-            } else {
-                sp.printBoundedNumericalQuantifierTerm(name, t.varsBoundHere(2), t.sub(0), 
-                        t.sub(1), t.sub(2), ass1, ass2);
-            }
-        }
-
-    }
-
-    /**
-         * The standard concrete syntax for DL modalities box and diamond.
-         */
-    public static class Modality extends Notation {
-	String left, right;
-
-	int ass;
-
-	public Modality(String left, String right, int prio, int ass) {
+	public ModalityNotation(String left, String right, int prio, int ass) {
 	    super(prio);
 	    this.left = left;
 	    this.right = right;
@@ -269,20 +168,19 @@ public abstract class Notation {
 	}
 
 	public void print(Term t, LogicPrinter sp) throws IOException {
-	    if (sp.getNotationInfo().getAbbrevMap().isEnabled(t)) {
-		sp.printTerm(t);
-	    } else {
-		sp.printModalityTerm(left, t.javaBlock(), right, t, ass);
-	    }
+	    assert t.op() instanceof Modality;
+	    assert t.javaBlock() != null;
+	    sp.printModalityTerm(left, t.javaBlock(), right, t, ass);
 	}
     }
+    
 
     /**
-         * The concrete syntax for DL modalities represented with a
-         * SchemaVariable.
-         */
-    public static class ModalSVNotation extends Notation {
-	int ass;
+     * The concrete syntax for DL modalities represented with a
+     * SchemaVariable.
+     */
+    public static final class ModalSVNotation extends Notation {
+	private final int ass;
 
 	public ModalSVNotation(int prio, int ass) {
 	    super(prio);
@@ -290,154 +188,119 @@ public abstract class Notation {
 	}
 
 	public void print(Term t, LogicPrinter sp) throws IOException {
-	    if (sp.getNotationInfo().getAbbrevMap().isEnabled(t)) {
-		sp.printTerm(t);
-	    } else {
-		sp.printModalityTerm("\\modality{" + t.op().name().toString()
+	    sp.printModalityTerm("\\modality{" + t.op().name().toString()
 			+ "}", t.javaBlock(), "\\endmodality", t, ass);
-	    }
 	}
     }
 
+    
     /**
-         * The standard concrete syntax for terms with updates.
-         */
-    public static class AnonymousUpdate extends Notation {
+     * The standard concrete syntax for update application.
+     */
+    public static final class UpdateApplicationNotation extends Notation {
 
-	public AnonymousUpdate() {
+	public UpdateApplicationNotation() {
 	    super(115);
 	}
 
 	public void print(Term t, LogicPrinter sp) throws IOException {
-	    if (sp.getNotationInfo().getAbbrevMap().isEnabled(t)) {
-		sp.printTerm(t);
-	    } else {
-		final int assTarget = (t.sort() == Sort.FORMULA ? (((IUpdateOperator) t
-			.op()).target(t).op() == Op.EQUALS ? 75 : 60)
-			: 110);
-		sp.printAnonymousUpdate(t, assTarget);
-	    }
+	    assert t.op() == UpdateApplication.UPDATE_APPLICATION;
+	    final Operator targetOp = UpdateApplication.getTarget(t).op();
+	    final int assTarget 
+	    = (t.sort() == Sort.FORMULA 
+		    ? (targetOp.arity() == 1 ? 60 : 85) 
+			    : 110);
+
+	    sp.printUpdateApplicationTerm("{", "}", t, assTarget);
 	}
     }
-
+    
+    
     /**
-         * The standard concrete syntax for terms with updates.
-         */
-    public static class QuanUpdate extends Notation {
+     * The standard concrete syntax for elementary updates.
+     */
+    public static final class ElementaryUpdateNotation extends Notation {
 
-	public QuanUpdate() {
-	    super(115);
+	public ElementaryUpdateNotation() {
+	    super(150);
 	}
 
 	public void print(Term t, LogicPrinter sp) throws IOException {
-	    if (sp.getNotationInfo().getAbbrevMap().isEnabled(t)) {
-		sp.printTerm(t);
-	    } else {
-		final Operator targetOp = ((IUpdateOperator) t.op()).target(t)
-			.op();
-		final int assTarget = (t.sort() == Sort.FORMULA ? (targetOp
-			.arity() == 1 ? 60 : 85) : 110);
-		if (t.op() instanceof AnonymousUpdate) {
-		    sp.printAnonymousUpdate(t, assTarget);
-		} else {
-		    sp.printQuanUpdateTerm("{", ":=", "}", t, 80, 0, assTarget);
-		}
-	    }
+	    sp.printElementaryUpdate(":=", t, 0);
 	}
-    }
-
+    }    
+    
+    
     /**
-         * The standard concrete syntax for substitution terms.
-         */
-    public static class Subst extends Notation {
+     * The standard concrete syntax for parallel updates 
+     */
+    public static final class ParallelUpdateNotation extends Notation {
+
+	public ParallelUpdateNotation() {
+	    super(100);
+	}
+
+	public void print(Term t, LogicPrinter sp) throws IOException {
+	    assert t.op() == UpdateJunctor.PARALLEL_UPDATE;
+	    
+	    sp.printParallelUpdate("||", t, 10);
+	}
+    }    
+    
+    
+    /**
+      * The standard concrete syntax for substitution terms.
+      */
+    public static final class Subst extends Notation {
 	public Subst() {
 	    super(120);
 	}
 
 	public void print(Term t, LogicPrinter sp) throws IOException {
-	    if (sp.getNotationInfo().getAbbrevMap().isEnabled(t)) {
-		sp.printTerm(t);
-	    } else {
-		QuantifiableVariable v = instQV(t, sp, 1);
-		final int assTarget = (t.sort() == Sort.FORMULA ? (t.sub(1)
-			.op() == Op.EQUALS ? 75 : 60) : 110);
-		sp.printSubstTerm("{\\subst ", v, t.sub(0), 0, "}", t.sub(1),
-			assTarget);
+	    QuantifiableVariable v = instQV(t, sp, 1);
+	    final int assTarget = (t.sort() == Sort.FORMULA ? (t.sub(1)
+		    .op() == Equality.EQUALS ? 75 : 60) : 110);
+	    sp.printSubstTerm("{\\subst ", v, t.sub(0), 0, "}", t.sub(1),
+		    assTarget);
+	}
+	
+	private QuantifiableVariable instQV(Term t, LogicPrinter sp, int subTerm) {
+	    QuantifiableVariable v = t.varsBoundHere(subTerm).get(0);
+
+	    if (v instanceof SchemaVariable) {
+		Object object = (sp.getInstantiations()
+			.getInstantiation((SchemaVariable) v));
+		if (object != null) {
+		    Debug.assertTrue(object instanceof Term);
+		    Debug
+		    .assertTrue(((Term) object).op() instanceof QuantifiableVariable);
+		    v = (QuantifiableVariable) (((Term) object).op());
+		}
 	    }
+	    return v;
 	}
     }
 
+    
     /**
-         * The standard concrete syntax for function and predicate terms.
-         */
-    public static class Function extends Notation {
+     * The standard concrete syntax for function and predicate terms.
+     */
+    public static final class FunctionNotation extends Notation {
 
-	public Function() {
+	public FunctionNotation() {
 	    super(130);
 	}
 
 	public void print(Term t, LogicPrinter sp) throws IOException {
-	    if (sp.getNotationInfo().getAbbrevMap().isEnabled(t)) {
-		sp.printTerm(t);
-	    } else {
-		sp.printFunctionTerm(t.op().name().toString(), t);
-	    }
+	    sp.printFunctionTerm(t.op().name().toString(), t);
 	}
     }
 
+    
     /**
-         * The standard concrete syntax for a non rigid function with explicit
-         * known dependencies.
-         */
-    public static class NRFunctionWithDependenciesNotation extends Notation {
-
-	public NRFunctionWithDependenciesNotation() {
-	    super(130);
-	}
-
-	public void print(Term t, LogicPrinter sp) throws IOException {
-	    if (sp.getNotationInfo().getAbbrevMap().isEnabled(t)) {
-		sp.printTerm(t);
-	    } else {
-		final NRFunctionWithExplicitDependencies func = (NRFunctionWithExplicitDependencies) t
-			.op();
-		StringBuffer name = new StringBuffer(func.classifier());
-		name
-			.append(NRFunctionWithExplicitDependencies.DEPENDENCY_LIST_STARTER);
-
-		final int depSize = func.dependencies().size();
-		for (int i = 0; i < depSize; i++) {
-
-		    Location loc = func.dependencies().get(i);
-		    if (loc instanceof ProgramVariable
-			    && ((ProgramVariable) loc).isMember()) {
-			loc = AttributeOp.getAttributeOp((ProgramVariable) loc);
-		    }
-
-		    if (loc instanceof AttributeOp) {
-			name.append(Attribute.printName((AttributeOp) loc,
-				null, null).substring(1));
-		    } else {
-			name.append(loc.name());
-		    }
-		    name
-			    .append(NRFunctionWithExplicitDependencies.DEPENDENCY_LIST_SEPARATOR);
-		}
-		if (depSize == 0) {
-		    name
-			    .append(NRFunctionWithExplicitDependencies.DEPENDENCY_LIST_SEPARATOR);
-		}
-		name
-			.append(NRFunctionWithExplicitDependencies.DEPENDENCY_LIST_END);
-		sp.printFunctionTerm(name.toString(), t);
-	    }
-	}
-    }
-
-    /**
-         * The standard concrete syntax for arrays.
-         */
-    public static class CastFunction extends Notation {
+     * The standard concrete syntax for casts.
+     */
+    public static final class CastFunction extends Notation {
 
 	final String pre, post;
 
@@ -451,163 +314,95 @@ public abstract class Notation {
 	}
 
 	public void print(Term t, LogicPrinter sp) throws IOException {
-	    if (sp.getNotationInfo().getAbbrevMap().isEnabled(t)) {
-		sp.printTerm(t);
-	    } else {
-		sp.printCast(pre, post, t, ass);
-	    }
+	    sp.printCast(pre, post, t, ass);
 	}
     }
-
+    
+    
     /**
-         * The standard concrete syntax for query terms <code>o.q(x)</code>.
-         */
-    static class ProgramMethod extends Notation {
-	private final int ass;
+     * The standard concrete syntax for select.
+     */
+    public static final class SelectNotation extends Notation {
+	public SelectNotation() {
+	    super(140);
+	}
 
-	public ProgramMethod(int ass) {
+	public void print(Term t, LogicPrinter sp) throws IOException {
+	    sp.printSelect(t);
+	}
+    }
+    
+    
+    /**
+     * The standard concrete syntax for length.
+     */
+    public static final class LengthNotation extends Notation {
+	public LengthNotation() {
 	    super(130);
-	    this.ass = ass;
 	}
 
 	public void print(Term t, LogicPrinter sp) throws IOException {
-	    if (sp.getNotationInfo().getAbbrevMap().isEnabled(t)) {
-		sp.printTerm(t);
-	    } else if (((de.uka.ilkd.key.logic.op.ProgramMethod) t.op())
-		    .isStatic()) {
+	    sp.printLength(t);
+	}
+    }       
+    
+    
+    /**
+     * The standard concrete syntax for observer function terms.
+     */
+    static final class ObserverNotation extends Notation {
 
-		sp.printFunctionTerm(t.op().name().toString().replaceAll("::",
-			"."), t);
-	    } else {
-		final ProgramElementName name = (ProgramElementName) t.op()
-			.name();
-		sp.printQueryTerm(name.getProgramName() + "@("
-			+ name.getQualifier() + ")", t, ass);
-	    }
+	public ObserverNotation() {
+	    super(130);
+	}
+
+	public void print(Term t, LogicPrinter sp) throws IOException {
+	    sp.printObserver(t);
 	}
     }
     
-    //implemented by mbender for jmltest
-    public static class JMLProgramMethod extends Notation {
-        private final int ass;
-
-        public JMLProgramMethod(int ass) {
-            super(130);
-            this.ass = ass;
-        }
-
-        public void print(Term t, LogicPrinter sp) throws IOException {
-            if (sp.getNotationInfo().getAbbrevMap().isEnabled(t)) {
-                sp.printTerm(t);
-            } else if (((de.uka.ilkd.key.logic.op.ProgramMethod) t.op())
-                    .isStatic()) {
-
-                sp.printFunctionTerm(t.op().name().toString().replaceAll("::",
-                        "."), t);
-            } else {
-                final ProgramElementName name = (ProgramElementName) t.op()
-                        .name();
-                sp.printQueryTerm(name.getProgramName(), t, ass);
-            }
-        }
-    }
-
+    
+    
     /**
-         * The standard concrete syntax for attribute terms <code>o.a</code>.
-         */
-    public static class Attribute extends Notation {
+     * The standard concrete syntax for singleton sets.
+     */
+    public static final class SingletonNotation extends Notation {
 
-	private int associativity;
-
-	public Attribute(int priority, int associativity) {
-	    super(priority);
-	    this.associativity = associativity;
-	}
-
-	/**
-         * prints an attribute operator
-         */
-	public static String printName(AttributeOp op, Term refPrefix,
-		LogicPrinter sp) {
-	    final IProgramVariable ivar = op.attribute();
-	    if (!(ivar instanceof ProgramVariable)) {
-		return op.toString();
-	    }
-	    final ProgramVariable pvar = ((ProgramVariable) ivar);
-
-	    final String qualifier = pvar.getProgramElementName()
-		    .getQualifier();
-	    final String programName = pvar.getProgramElementName()
-		    .getProgramName();
-
-	    if (qualifier.length() == 0
-		    || (refPrefix != null && sp != null && sp.printInShortForm(
-			    programName, refPrefix))) {
-		return "." + programName;
-	    }
-
-	    return "." + programName + "@(" + qualifier + ")";
-
+	public SingletonNotation() {
+	    super(130);
 	}
 
 	public void print(Term t, LogicPrinter sp) throws IOException {
-	    if (sp.getNotationInfo().getAbbrevMap().isEnabled(t)) {
-		sp.printTerm(t);
-	    } else {
-		if (t.op() instanceof AttributeOp) {
-		    sp.printPostfixTerm(t.sub(0), associativity, printName(
-			    (AttributeOp) t.op(), t.sub(0), sp));
-		} else {
-		    sp.printPostfixTerm(t.sub(0), associativity, "."
-			    + t.op().name());
-		}
-	    }
+	    sp.printSingleton(t);
 	}
     }
     
-    static class WorkingSpaceOp extends Notation {
-        
-        protected WorkingSpaceOp(int priority) {
-            super(priority);
-        }
-        
-        public void print(Term t, LogicPrinter sp) throws IOException {
-            if (sp.getNotationInfo().getAbbrevMap().isEnabled(t)) {
-                sp.printTerm(t);
-            }else{
-                sp.printFunctionTerm(t.op().name().toString(), t);
-            }
-        }
-    }
-
     /**
-         * The standard concrete syntax for attribute terms <code>o.a</code>.
-         */
-    public static class ShadowAttribute extends Notation {
+     * The standard concrete syntax for the element of operator.
+     */
+    public static final class ElementOfNotation extends Notation {
 
-	private int associativity;
-
-	public ShadowAttribute(int priority, int associativity) {
-	    super(priority);
-	    this.associativity = associativity;
+	public ElementOfNotation() {
+	    super(130);
 	}
 
 	public void print(Term t, LogicPrinter sp) throws IOException {
-	    if (sp.getNotationInfo().getAbbrevMap().isEnabled(t)) {
-		sp.printTerm(t);
-	    } else {
-		sp.printShadowedAttribute(t.sub(0), associativity, Attribute
-			.printName(((AttributeOp) t.op()), t.sub(0), sp), t
-			.sub(1));
-	    }
+	    sp.printElementOf(t);
 	}
-    }
-
+    }      
+    
+    
+    
     /**
-         * The standard concrete syntax for conditional terms
-         * <code>if (phi) (t1) (t2)</code>.
-         */
-    public static class IfThenElse extends Notation {
+     * The standard concrete syntax for set comprehension.
+     */
+    
+    
+    /**
+     * The standard concrete syntax for conditional terms
+     * <code>if (phi) (t1) (t2)</code>.
+     */
+    public static final class IfThenElse extends Notation {
 
 	private final String keyword;
 
@@ -617,17 +412,14 @@ public abstract class Notation {
 	}
 
 	public void print(Term t, LogicPrinter sp) throws IOException {
-	    if (sp.getNotationInfo().getAbbrevMap().isEnabled(t)) {
-		sp.printTerm(t);
-	    } else {
-		sp.printIfThenElseTerm(t, keyword);
-	    }
+	    sp.printIfThenElseTerm(t, keyword);
 	}
     }
 
+    
     /**
-         * The standard concrete syntax for all kinds of variables.
-         */
+     * The standard concrete syntax for all kinds of variables.
+     */
     public static class VariableNotation extends Notation {
 	public VariableNotation() {
 	    super(1000);
@@ -645,7 +437,9 @@ public abstract class Notation {
 	}
     }
 
-    public static class SortedSchemaVariableNotation extends VariableNotation {
+    
+    public static final class SchemaVariableNotation extends VariableNotation {
+
 	public void print(Term t, LogicPrinter sp) throws IOException {
 	    // logger.debug("SSV: " + t+ " [" + t.op() + "]");
 	    Debug.assertTrue(t.op() instanceof SchemaVariable);
@@ -688,23 +482,12 @@ public abstract class Notation {
 	}
     }
 
-    public static class MetavariableNotation extends Notation {
-	public MetavariableNotation() {
-	    super(1000);
-	}
-
-	public void print(Term t, LogicPrinter sp) throws IOException {
-	    sp
-		    .printMetavariable((de.uka.ilkd.key.logic.op.Metavariable) t
-			    .op());
-	}
-    }
-
+    
     /**
-         * The standard concrete syntax for the number literal indicator `Z'.
-         * This is only used in the `Pretty&amp;Untrue' syntax.
-         */
-    static class NumLiteral extends Notation {
+     * The standard concrete syntax for the number literal indicator `Z'.
+     * This is only used in the `Pretty&amp;Untrue' syntax.
+     */
+    static final class NumLiteral extends Notation {
 	public NumLiteral() {
 	    super(120);
 	}
@@ -715,7 +498,7 @@ public abstract class Notation {
 	    // skip number symbol /as this method may be called
 	    // e.g. by char literal we do not fail if the first is
 	    // not the number symbol
-	    if (t.op().name().equals(AbstractIntegerLDT.NUMBERS_NAME)) {
+	    if (t.op().name().equals(IntegerLDT.NUMBERS_NAME)) {
 		t = t.sub(0);
 	    }
 
@@ -754,11 +537,12 @@ public abstract class Notation {
 	    }
 	}
     }
+    
 
     /**
-         * The standard concrete syntax for the character literal indicator `C'.
-         */
-    static class CharLiteral extends Notation {
+     * The standard concrete syntax for the character literal indicator `C'.
+     */
+    static final class CharLiteral extends Notation {
 	public CharLiteral() {
 	    super(1000);
 	}
@@ -785,7 +569,7 @@ public abstract class Notation {
 		return null;
 	    }
 
-	    return ("'" + new Character(charVal)) + "'";
+	    return ("'" + Character.valueOf(charVal)).toString() + "'";
 	}
 
 	public void print(Term t, LogicPrinter sp) throws IOException {
@@ -797,12 +581,13 @@ public abstract class Notation {
 	    }
 	}
     }
+    
 
     /**
-         * The standard concrete syntax for the string literal indicator `cat'
-         * or `epsilon'.
-         */
-    public static class StringLiteral extends Notation {
+     * The standard concrete syntax for the string literal indicator `cat'
+     * or `epsilon'.
+     */
+    static final class StringLiteral extends Notation {
 
 	public StringLiteral() {
 	    super(1000);
@@ -822,189 +607,5 @@ public abstract class Notation {
 	public void print(Term t, LogicPrinter sp) throws IOException {
 	    sp.printConstant(printStringTerm(t));
 	}
-    }
-
-    /**
-         * Used for OCL Simplification. The standard concrete syntax for the OCL
-         * "iterate" operation.
-         */
-    public static class OCLIterate extends Notation {
-
-	public OCLIterate() {
-	    super(130);
-	}
-
-	public void print(Term t, LogicPrinter sp) throws IOException {
-	    QuantifiableVariable iterVar = t.varsBoundHere(2).get(0);
-	    QuantifiableVariable accVar = t.varsBoundHere(2).get(1);
-	    sp.printOCLIterateTerm(t.sub(0), "->", "iterate", "(", ""
-		    + iterVar.name() + ":" + iterVar.sort().name(), "; ", ""
-		    + accVar.name() + ":" + accVar.sort().name(), "=",
-		    t.sub(1), " | ", t.sub(2), ")");
-	}
-    }
-
-    /**
-         * Used for OCL Simplification. The standard concrete syntax for the OCL
-         * collection operations with one iteration variable.
-         */
-    public static class OCLCollOpBoundVar extends Notation {
-	String name;
-
-	public OCLCollOpBoundVar(String name) {
-	    super(130);
-	    this.name = name;
-	}
-
-	public void print(Term t, LogicPrinter sp) throws IOException {
-	    QuantifiableVariable iterVar = t.varsBoundHere(1).get(0);
-	    sp.printOCLCollOpBoundVarTerm(t.sub(0), "->", name, "(", ""
-		    + iterVar.name() + ":" + iterVar.sort().name(), " | ", t
-		    .sub(1), ")");
-	}
-    }
-
-    /**
-         * Used for OCL Simplification. The standard concrete syntax for the OCL
-         * collection operations without iteration variables.
-         */
-    public static class OCLCollOp extends Notation {
-	String name;
-
-	public OCLCollOp(String name) {
-	    super(130);
-	    this.name = name;
-	}
-
-	public void print(Term t, LogicPrinter sp) throws IOException {
-	    sp.printOCLCollOpTerm(name, t);
-	}
-    }
-
-    /**
-         * Used for OCL Simplification. The standard concrete syntax for the OCL
-         * "dot" operations.
-         */
-    public static class OCLDotOp extends Notation {
-	String name;
-
-	int ass;
-
-	public OCLDotOp(String name, int ass) {
-	    super(130);
-	    this.name = name;
-	    this.ass = ass;
-	}
-
-	public void print(Term t, LogicPrinter sp) throws IOException {
-	    sp.printQueryTerm(name, t, ass);
-	}
-    }
-
-    /**
-         * Used for OCL Simplification. The standard concrete syntax for the OCL
-         * if-then-else-endif operation.
-         */
-    public static class OCLIf extends Notation {
-
-	public OCLIf() {
-	    super(125);
-	}
-
-	public void print(Term t, LogicPrinter sp) throws IOException {
-	    sp.printOCLIfTerm("if ", t.sub(0), "then ", t.sub(1), "else ", t
-		    .sub(2), "endif");
-	}
-    }
-
-    /**
-         * Used for OCL Simplification. The standard concrete syntax for OCL
-         * collections.
-         */
-    public static class OCLCollection extends Notation {
-	String name;
-
-	public OCLCollection(String name) {
-	    super(130);
-	    this.name = name;
-	}
-
-	public void print(Term t, LogicPrinter sp) throws IOException {
-	    sp.layouter.beginI(0);
-	    sp.layouter.print(name + "{");
-	    sp.printOCLCollectionTerm(t);
-	    sp.layouter.print("}").end();
-	}
-    }
-
-    /**
-         * Used for OCL Simplification. The standard concrete syntax for the OCL
-         * wrapper predicate.
-         */
-    public static class OCLWrapper extends Notation {
-
-	public OCLWrapper() {
-	    super(130);
-	}
-
-	public void print(Term t, LogicPrinter sp) throws IOException {
-	    sp.printOCLWrapperTerm(t);
-	}
-    }
-
-    /**
-         * Used for OCL Simplification. The standard concrete syntax for an OCL
-         * invariant.
-         */
-    public static class OCLInvariant extends Notation {
-
-	public OCLInvariant() {
-	    super(130);
-	}
-
-	public void print(Term t, LogicPrinter sp) throws IOException {
-	    sp.printOCLInvariantTerm(t.sub(0), t.sub(1));
-	}
-    }
-
-    /**
-         * Used for OCL Simplification. The concrete syntax for a list of OCL
-         * invariants.
-         */
-    public static class OCLListOfInvariants extends Notation {
-
-	public OCLListOfInvariants() {
-	    super(130);
-	}
-
-	public void print(Term t, LogicPrinter sp) throws IOException {
-	    sp.layouter.beginI(0);
-	    sp.layouter.brk(0, -1).print("[\n");
-	    sp.printOCLListOfInvariantsTerm(t);
-	    sp.layouter.print("\n]").end();
-	}
-    }
-
-    /**
-         * @param t
-         * @param sp
-         * @param subTerm
-         *                TODO
-         * @return the quantified variable
-         */
-    protected QuantifiableVariable instQV(Term t, LogicPrinter sp, int subTerm) {
-	QuantifiableVariable v = t.varsBoundHere(subTerm).get(0);
-
-	if (v instanceof SchemaVariable) {
-	    Object object = (sp.getInstantiations()
-		    .getInstantiation((SchemaVariable) v));
-	    if (object != null) {
-		Debug.assertTrue(object instanceof Term);
-		Debug
-			.assertTrue(((Term) object).op() instanceof QuantifiableVariable);
-		v = (QuantifiableVariable) (((Term) object).op());
-	    }
-	}
-	return v;
     }
 }
